# BioPython-Convert

./: .gitignore  CONTRIBUTING.rst  LICENCE.rst  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
biopython.convert/: __init__.py
biopython_convert/: JMESPathGen.py  __init__.py  __main__.py  __version.py
test-data/: no_seq.gbff
test-data/outputs/: faa  gentype  info  jpath_slice  json  json_jpath  json_jpath_split  ptt  txt  yaml  yaml_jpath
test-data/outputs/split/: record.1  record.2
tests/: __init__.py  __main__.py  test_convert.py
