[metadata]
name = biopython.convert
author = Nolan Woods
author_email = nolan_w@sfu.ca
summary = Interconvert various file formats supported by biopython. Supports querying records with JMESPath.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/brinkmanlab/biopython-convert
license = MIT Amended
classifier =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    convert
    biopython
    bioinformatics
    gff
    genbank
    embl
    filter
    fasta
    fastq

[files]
packages =
    biopython_convert
[entry_points]
console_scripts =
    biopython.convert = biopython_convert.__main__:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
[bdist_wheel]
universal = 1

[options]
test_suite = tests

